--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 
 <body>
   <main class="card">
-    <img class="card__qr-code" src="./images/image-qr-code.png" alt="Scan to visit Frontend Mentor" />
-    <section>
-      <h1 class="card__heading">Improve your front-end skills by building projects</h1>
-      <p class="card__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
-        level</p>
-    </section>
+    <img class="card__qr-code" src="./images/image-qr-code.png" alt="QR code to visit Frontend Mentor" />
+    <h1 class="card__heading">Improve your front-end skills by building projects</h1>
+    <p class="card__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
+      level</p>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
